--- a/App/templates/one_user.html
+++ b/App/templates/one_user.html
@@ -14,7 +14,8 @@
                 <h5>Tel: {{one.phone}}</h5>
                 <h5>Email: {{one.email}}</h5>
                 <h5>Title: {{one.title}}</h5><br>
-                <h5>Summary: {{my_profile.summary}}</h5><br><br>
+                <h5>Summary: {{one.summary}}</h5><br>
+                <h5>For more info: {{one.more_info}}</h5><br><br>
         </div>
         <div class="col-md-2"></div>
     </div>
