--- a/App/templates/home.html
+++ b/App/templates/home.html
@@ -18,6 +18,58 @@
         </div>
         {% endfor %}
       </div>
+      <br>
+      <br>
+      <br>
+      <footer>
+        <div class="footer-widget">
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-4">
+                <div class="single-widget">
+                  <h3>Our Services</h3>
+                  <ul>
+                    <li><a href="">Gate Machine</a></li>
+                    <li><a href="">CCTV camera </a></li>
+                    <li><a href="">Electrical Armoire </a></li>
+                    <li><a href="">Fire Alarm</a></li>
+                  </ul>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="single-widget">
+                  <h3>Quick Services</h3>
+                  <ul>
+                    <li><a href="">online support</a></li>
+                    <li><a href="">IT Support</a></li>
+                    <li><a href="">Maintenance</a></li>
+                    <li><a href="">Troubleshooting</a></li>
+                  </ul>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="single-widget">
+                  <h3>About Us</h3>
+                  <ul>
+                    <li><a href="">Who we are</a></li>
+                    <li><a href="">Our Services</a></li>
+                    <li><a href="">how we work</a></li>
+                  </ul>
+                </div>
+              </div>
+              
+            </div>
+          </div>
+        </div>
+        <br>
+        <br>
+        <div class="copy">
+          <p style="text-align: center;">Copyright © 2021 E-Platform All rights reserved.</p>
+        </div>
+       
+      
+        
+      </footer>
 </div>
 
 {% endblock %}
