--- a/App/templates/navbar.html
+++ b/App/templates/navbar.html
@@ -12,7 +12,7 @@
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
               <h1 class="display-4">E-Platform</h1>
-              <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+              <p class="lead">Live in Digital Life</p>
             </div>
             
             <ul class="nav justify-content-end" style="margin-bottom: -5%;">
@@ -21,6 +21,9 @@
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="{%url 'all_users' %}">ABOUT US</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href=/admin>ADMIN</a>
                 </li>
             </ul>
         </div>
